--- a/TwitterClient/TwitterClient/Base.lproj/Main.storyboard
+++ b/TwitterClient/TwitterClient/Base.lproj/Main.storyboard
@@ -42,8 +42,11 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2m" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BsE-dy-Njq">
-                                            <rect key="frame" x="292" y="17" width="18" height="15"/>
+                                            <rect key="frame" x="285" y="17" width="25" height="15"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="25" id="Wwf-7b-9GO"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -63,11 +66,11 @@
                                         <constraint firstItem="u7a-dB-xWN" firstAttribute="top" secondItem="lDJ-PZ-lCS" secondAttribute="top" constant="15" id="9DZ-GL-Fkz"/>
                                         <constraint firstItem="doz-VU-amO" firstAttribute="baseline" secondItem="u7a-dB-xWN" secondAttribute="baseline" id="Ct9-2s-K7K"/>
                                         <constraint firstItem="Qat-JZ-XUN" firstAttribute="leading" secondItem="nxR-SK-s2r" secondAttribute="trailing" constant="8" symbolic="YES" id="FYl-Ml-S4W"/>
+                                        <constraint firstItem="BsE-dy-Njq" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="doz-VU-amO" secondAttribute="trailing" constant="8" symbolic="YES" id="GTM-y9-Qcs"/>
                                         <constraint firstItem="doz-VU-amO" firstAttribute="top" secondItem="lDJ-PZ-lCS" secondAttribute="top" constant="17" id="IH7-CA-aaM"/>
                                         <constraint firstItem="nxR-SK-s2r" firstAttribute="top" secondItem="lDJ-PZ-lCS" secondAttribute="top" constant="15" id="NT5-d0-cI1"/>
                                         <constraint firstItem="BsE-dy-Njq" firstAttribute="top" secondItem="lDJ-PZ-lCS" secondAttribute="top" constant="17" id="Nnx-2P-iMB"/>
                                         <constraint firstItem="doz-VU-amO" firstAttribute="leading" secondItem="u7a-dB-xWN" secondAttribute="trailing" constant="8" symbolic="YES" id="aSX-Bb-EU8"/>
-                                        <constraint firstItem="BsE-dy-Njq" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="doz-VU-amO" secondAttribute="trailing" constant="8" symbolic="YES" id="kL9-pb-lDh"/>
                                         <constraint firstAttribute="trailing" secondItem="BsE-dy-Njq" secondAttribute="trailing" constant="10" id="nJD-mO-Pz6"/>
                                         <constraint firstItem="Qat-JZ-XUN" firstAttribute="top" secondItem="u7a-dB-xWN" secondAttribute="bottom" constant="8" symbolic="YES" id="ukx-fo-Rlf"/>
                                         <constraint firstItem="nxR-SK-s2r" firstAttribute="leading" secondItem="lDJ-PZ-lCS" secondAttribute="leading" constant="15" id="vnv-JT-RNI"/>
@@ -171,7 +174,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="faK-Oz-JB8">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="faK-Oz-JB8">
                                 <rect key="frame" x="0.0" y="21" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
@@ -194,22 +197,46 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hbo-YJ-EgS">
-                                <rect key="frame" x="20" y="104" width="280" height="248"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hbo-YJ-EgS">
+                                <rect key="frame" x="20" y="82" width="280" height="140"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="6LL-S1-jwd"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <connections>
                                     <outlet property="delegate" destination="UwU-CF-9ET" id="gxD-II-gIn"/>
                                 </connections>
                             </textView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="140" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rlV-BP-26W">
+                                <rect key="frame" x="258" y="327" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="hns-lu-9cd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hbo-YJ-EgS" firstAttribute="leading" secondItem="7KQ-oB-QZ5" secondAttribute="leading" constant="20" id="1Zo-xp-vGp"/>
+                            <constraint firstItem="faK-Oz-JB8" firstAttribute="leading" secondItem="7KQ-oB-QZ5" secondAttribute="leading" id="41z-Ui-0iL"/>
+                            <constraint firstItem="faK-Oz-JB8" firstAttribute="top" secondItem="HyM-AG-dJn" secondAttribute="bottom" constant="1" id="8mD-IC-G8e"/>
+                            <constraint firstAttribute="trailing" secondItem="rlV-BP-26W" secondAttribute="trailing" constant="20" id="Afx-Dy-Dcy"/>
+                            <constraint firstItem="faK-Oz-JB8" firstAttribute="centerX" secondItem="hbo-YJ-EgS" secondAttribute="centerX" id="Fuh-O6-mXH"/>
+                            <constraint firstAttribute="trailing" secondItem="hbo-YJ-EgS" secondAttribute="trailing" constant="20" id="Zcj-ph-Qc2"/>
+                            <constraint firstItem="hbo-YJ-EgS" firstAttribute="top" secondItem="HyM-AG-dJn" secondAttribute="bottom" constant="62" id="hyv-dk-o7g"/>
+                            <constraint firstItem="7Bo-lC-tBe" firstAttribute="top" secondItem="rlV-BP-26W" secondAttribute="bottom" constant="220" id="tA0-tK-h4P"/>
+                        </constraints>
                     </view>
                     <toolbarItems/>
                     <connections>
+                        <outlet property="charRemaining" destination="rlV-BP-26W" id="4An-N7-xk0"/>
                         <outlet property="statusText" destination="hbo-YJ-EgS" id="Qqh-an-CdA"/>
+                        <outlet property="tweetButton" destination="vtN-jc-765" id="fL4-FS-ucA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KrN-f9-cZt" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -390,6 +417,7 @@
                         <outlet property="avatar" destination="WkX-yV-Vmn" id="uPD-lR-eq7"/>
                         <outlet property="favoriteButton" destination="FxJ-XU-aHE" id="t6j-IV-ScP"/>
                         <outlet property="favorites" destination="cR5-RY-Qdl" id="DTo-jS-vCK"/>
+                        <outlet property="retweetButton" destination="rG3-CU-vpp" id="oD5-Cd-eWf"/>
                         <outlet property="retweets" destination="UjB-wa-0Vo" id="5xq-O8-82J"/>
                         <outlet property="tweetDate" destination="lrQ-hS-xku" id="x4F-o2-n6G"/>
                         <outlet property="tweetText" destination="5r8-RI-PPd" id="iG0-g2-Y3I"/>
